--- a/README_CN.ini
+++ b/README_CN.ini
@@ -21,6 +21,11 @@ voice_payment
 ros2 launch voice_payment payment.launch.py
 此包融合了语音控制摄像头识别付款码与语音控制出示付款码。
 
+cartographer_launch
+启动建图cartographer建图
+先安装sudo apt install ros-<ros2版本>-cartographer
+
+
 py_install
 语音控制依赖库
 搭建环境：
